# dobot_project

./: PROJECT_STRUCTRUE.md  QUICK_START.md  README.md  Requirements.txt  TROUBLESHOOTING.md  config.py  setup.py  utils.py  yolo_detector.py
backupfile/: tts.py
backupfile/dobot_project-main/: INSTALLATION_CHECKLIST.md  PROJECT_STRUCTRUE.md
backupfile/dobot_project-main/python_project_file/: main.py  run.sh  yolo_detector.py
backupfile/logs/: order_log.txt
dobot_workspace/install/: local_setup.sh  setup.sh
dobot_workspace/install/dobot_robot_manager/share/dobot_robot_manager/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
dobot_workspace/install/dobot_robot_manager/share/dobot_robot_manager/config/: production.yaml
dobot_workspace/src/dobot_robot_manager/: setup.cfg  setup.py
dobot_workspace/src/dobot_robot_manager/config/: development.yaml  launch_config.yaml  robot_config.yaml  server_config.yaml  system_config.yaml  topics_config.yaml
dobot_workspace/src/dobot_robot_manager/dobot_robot_manager/: client_node.py  tcp_server.py
dobot_workspace/src/python_project_file/: camera_calibration_utility.py  diagnose_dobot.py  dobot_api_handler.py  robot_controller.py  run.sh  setup.py  yolo_detector.py
dobot_workspace/src/python_project_file/logs/: order_log.txt
python_project_file/: config.py  dobot_api_handler.py  dobot_node.py  dobot_server.py  integration_test.py  logger_setup.py  main.py  robot_controller.py  run.bat  run.py  test_connection_stabliity.py  test_system.py  ui_components.py  utils.py  yolo_detector.py
(+7 files in other folders)
